--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -26,7 +26,7 @@
   background-color: #e6eaf1;
   border-radius: 50px;
   color: grey;
-  font-size: 50px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -38,6 +38,7 @@
 .sidebar .recent-title {
   margin-top: 30px;
   margin-bottom: 20px;
+  color: black;
 }
 
 .sidebar .recent-entry {
