--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -125,10 +125,12 @@
   padding: 0 5%;
   max-height: 70vh;
   overflow-y: scroll;
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
 }
 
-.result::--webkit-scrollbar {
-  display: none;
+.result:state(webkit-scrollbar) {
+  display: none !important;
 }
 
 .result-title {
@@ -147,4 +149,36 @@
   display: flex;
   align-items: start;
   gap: 20px;
+}
+
+.loader {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.loader hr {
+  border-radius: 4px;
+  border: none;
+  background-color: #f6f7f8;
+  background: linear-gradient(to right, #9ed7ff, #ffffff, #9ed7ff);
+  background-size: 800px 50px;
+  height: 20px;
+  animation: loader 3s infinite linear;
+}
+
+@keyframes loader {
+  0% {
+    background-position: -800px 0px;
+  }
+  100% {
+    background-position: 800px 0px;
+  }
+}
+
+.result-data p {
+  font-size: 17px;
+  font-weight: 300px;
+  line-height: 1.8;
 }
