--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -127,7 +127,7 @@
 .result {
   padding: 0 5%;
   max-height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: none !important;
   -ms-overflow-style: none !important;
 }
