--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,10 +1,13 @@
 .sidebar {
-  min-height: 100vh;
+  height: 100vh;
   display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
   background: #f0f4f9;
   padding: 25px 15px;
+
+  overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 .sidebar img {
@@ -58,6 +61,8 @@
 }
 
 .sidebar .bottom {
+  margin-top: 30px;
+
   display: flex;
   flex-direction: column;
 }
