--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -180,6 +180,12 @@
   }
 }
 
+.result-data text {
+  font-size: 17px;
+  font-weight: 300px;
+  line-height: 1.8;
+}
+
 .result-data p {
   font-size: 17px;
   font-weight: 300px;
