--- a/src/context/Context.css
+++ b/src/context/Context.css
@@ -1,18 +1,19 @@
 .code-block {
   background-color: #f4f4f4;
   border-radius: 5px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
+    Liberation Mono, monospace !important;
   white-space: pre-wrap;
   margin-top: -10px;
   width: 100%;
-  padding: 0 0 0 20px;
+  padding: 0 0 0 10px;
   position: relative;
 }
 
 .code-header {
   background-color: #393939;
   padding: 5px 10px;
-  margin: 0 0 0 -20px;
+  margin: 0 0 0 -10px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -21,7 +22,9 @@
   display: block;
   font-size: 12px;
   color: #b4b4b4;
-  font-family: "Courier New", Courier, monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
+    Liberation Mono, monospace !important;
+  margin: 0 0 0 10px;
 }
 
 .inline-code {
@@ -37,4 +40,7 @@
 .code-block code {
   display: block;
   padding: 10px;
+  font-size: 14px;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
+    Liberation Mono, monospace !important;
 }
