--- a/src/context/Context.css
+++ b/src/context/Context.css
@@ -4,8 +4,8 @@
   font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
     Liberation Mono, monospace !important;
   white-space: pre-wrap;
-  margin-top: -10px;
   width: 100%;
+  margin: 20px 0 -10px 0;
   padding: 0 0 0 10px;
   position: relative;
 }
