--- a/src/context/Context.css
+++ b/src/context/Context.css
@@ -13,7 +13,7 @@
 .code-header {
   background-color: #393939;
   padding: 5px 10px;
-  margin: 0 0 0 -10px;
+  margin: -10px 0 0 -10px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
